--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,10 @@
+.swup-transition-fade {
+    transition: .4s;
+    opacity: 1;
+}
+html.is-animating .swup-transition-fade{
+    opacity: 0;
+}
 body {
     background: #fff;
     font-family: 'Raleway', sans-serif;
@@ -142,6 +149,10 @@ input, button, select, textarea {
 .menu li a {
     display: inline;
     font-size: 0.8rem;
+}
+.active {
+    background: linear-gradient(#00c5e8 50%,#00c5e8 0) repeat-x 0 55%;
+    background-size: 0.2rem 0.2rem;
 }
 .menu li a:hover,
 .menu li a.active{
